--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Leto的Blog | Leto的Blog</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
-    <link rel="stylesheet" href="https://kaseeia-hsu.github.io/css/theme-override.css">
+    <link rel="stylesheet" href="https://kaseeia-hsu.github.io/css/fonts.css">
     
   </head>
 
