--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="content-wrapper">
 
 
-  <img src="/images/alps.png">
+  <img src="images/alps.png">
 <h2 id="welcome-friend">Welcome, friend</h2>
 <p>达尔加湖（Lago di Garda）的北方，是拔地而起的阿尔卑斯山。周五傍晚，晚霞点亮了一盏盏路灯。最后一班公车载走了最后一个归家的人，Adamello的山谷里，只剩雪水融化的声音。</p>
 <p>风停了，飘荡的床单缓缓落下。第十瓶酒见底后，他开始怀念在这里度过的每一个夏天，在群峰上的每一次攀登，在山石与雪原间留下的每一道足迹。</p>
