--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 <div class="content-wrapper">
 
 
-  <img src="images/alps.png">
+  <img src="images/alps.png" width="30%" height="30%">
 <h2 id="welcome-friend">Welcome, friend</h2>
 <p>达尔加湖（Lago di Garda）的北方，是拔地而起的阿尔卑斯山。周五傍晚，晚霞点亮了一盏盏路灯。最后一班公车载走了最后一个归家的人，Adamello的山谷里，只剩雪水融化的声音。</p>
 <p>风停了，飘荡的床单缓缓落下。第十瓶酒见底后，他开始怀念在这里度过的每一个夏天，在群峰上的每一次攀登，在山石与雪原间留下的每一道足迹。</p>
 <p>八年前，他在春色郁郁的森林中奔跑；而我，静静的在校园里学习：那时的教室外总下着雨，书本像一块铁，雨声是闹个不停的锤声，铁砧与铁锤之间，我在生锈、在从贫瘠的文字与影像里，幻想青年的另一种模样。可无论如何，生活的戏剧性终会让我们从地球的两端出发，并在数年后相逢。</p>
-<p><strong>&ldquo;Je n&rsquo;ai jamais cessé d&rsquo;être heureux. La vie n&rsquo;est pas une fête perpétuelle c&rsquo;est une vallée de larmes , mais c&rsquo;est aussi une vallée rose. Et si vous parlez des larmes, il ne faut pas oublier les roses et si vous parlez des roses.&rdquo;</strong></p>
+<p><em>&ldquo;Je n&rsquo;ai jamais cessé d&rsquo;être heureux. La vie n&rsquo;est pas une fête perpétuelle c&rsquo;est une vallée de larmes , mais c&rsquo;est aussi une vallée rose. Et si vous parlez des larmes, il ne faut pas oublier les roses et si vous parlez des roses.&rdquo;</em></p>
 <p>📍维尔纽斯</p>
 <hr>
 <h2 id="musings">Musings</h2>
