--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      
      <li>
        <span class="date">0001/01/01</span>
-       <a href="/posts/%E5%A4%8F%E5%A4%A9/"></a>
+       <a href="/posts/summer/"></a>
      </li>
      
    </ul>
