--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The personal writings and expressions of Grayfox, otherwise known as you too and everyone else. It is a loving and silly place.">
-    <title>Home | Leto&#39;s Blog</title>
+    <meta name="description" content="日常点滴">
+    <title>Leto&#39;s Blog | Leto&#39;s Blog</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     <link rel="stylesheet" href="https://kaseeia-hsu.github.io/css/fonts.css">
