--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="日常点滴">
+    <meta name="description" content="Tabula Rasa">
     <title>Leto&#39;s Blog | Leto&#39;s Blog</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
