--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="A simple, minimal blog for those who love text.">
+    <meta name="description" content="我们生活的日常，又何尝不是美的集大成者。">
     <title>404 Page not found | Leto&#39;s Blog</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
