--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p><a href="https://fr.wikipedia.org/wiki/Jean_d%27Ormesson"><em>&ldquo;Je n&rsquo;ai jamais cessé d&rsquo;être heureux. La vie n&rsquo;est pas une fête perpétuelle c&rsquo;est une vallée de larmes , mais c&rsquo;est aussi une vallée rose. Et si vous parlez des larmes, il ne faut pas oublier les roses et si vous parlez des roses.&rdquo;</em></a></p>
 <p>📍维尔纽斯</p>
 <hr>
-<p><a href="https://blog.catbaron.com/"><img src="/images/catava.png" width="30%" height="30%" hspace="50" vspace="50"></a></p>
+<p><a href="https://blog.catbaron.com/"><img src="/images/catava.png" width="5%" height="5%" hspace="50" vspace="50"></a><a href="https://aeoliantn.github.io/"><img src="/images/teniava.png" width="5%" height="5%" hspace="50" vspace="50"></a></p>
 <hr>
 <h2 id="posts">Posts</h2>
 
