--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 <hr>
 <p style="text-align: center;">
   <a href="https://blog.catbaron.com/">
-    <img src="/images/catava.png" style=" width="15%" height="15%" display: inline-block; margin: 0 10px;">
+    <img src="/images/catava.png" style=" width: 80px; display: inline-block; margin: 0 10px;">
   </a>
   <a href="https://aeoliantn.github.io/">
-    <img src="/images/teniava.png" style=" width="15%" height="15%" display: inline-block; margin: 0 10px;">
+    <img src="/images/teniava.png" style=" width: 80px; display: inline-block; margin: 0 10px;">
   </a>
 </p>
 <hr>
