--- a/index.html
+++ b/index.html
@@ -64,12 +64,13 @@
 <p><a href="https://fr.wikipedia.org/wiki/Jean_d%27Ormesson"><em>&ldquo;Je n&rsquo;ai jamais cessé d&rsquo;être heureux. La vie n&rsquo;est pas une fête perpétuelle c&rsquo;est une vallée de larmes , mais c&rsquo;est aussi une vallée rose. Et si vous parlez des larmes, il ne faut pas oublier les roses et si vous parlez des roses.&rdquo;</em></a></p>
 <p>📍维尔纽斯</p>
 <hr>
+<p>友站链接：</p>
 <p style="text-align: center;">
   <a href="https://blog.catbaron.com/">
-    <img src="/images/catava.png" style=" width: 80px; display: inline-block; margin: 0 10px;">
+    <img src="/images/catava.png" style=" width: 60px; display: inline-block; margin: 0 10px;">
   </a>
   <a href="https://aeoliantn.github.io/">
-    <img src="/images/teniava.png" style=" width: 80px; display: inline-block; margin: 0 10px;">
+    <img src="/images/teniava.png" style=" width: 60px; display: inline-block; margin: 0 10px;">
   </a>
 </p>
 <hr>
