--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
     <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+    <link rel="stylesheet" href="/css/gitalk.css">
+
 
     
   </head>
